Fixed footer content sizing on narrow screens

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,17 +1,12 @@
 ﻿.FooterLinks {
-    flex-grow: 1;
-    flex-basis: 0;
-    
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    text-align: left;
 }
 
 .SocialIconContainer {
-    flex-grow: 1;
-    flex-basis: 0;
-    
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -30,9 +25,29 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    gap: 20px;
+    height: 40px;
+    
+    & img {
+        max-width: 100%;
+        height: auto;
+    }
 
     & text, & p, & a {
         color: lightgrey;
         margin: 0;
+        font-size: min(3vw, 100%);
     }
+}
+
+.flex-non-centered {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0;
+}
+
+.flex-centered {
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: auto;
 }
